--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,21 +1,33 @@
 spring:
+  thymeleaf:
+    cache: false
   datasource:
-    url: jdbc:h2:tcp://localhost/~/campingboard
-    username: 'sa'
-    password: '0000'
-    driver-class-name: org.h2.Driver
-  jpa:
-    generate-ddl: true
-    hibernate:
-      # 자동으로 테이블을 생성해주는 모드
-      ddl-auto: create
-    properties:
-      hibernate:
-        format_sql: true
-        # show_sql: true
-        # default_batch_fetch_size: 1000 #최적화 옵션
-    defer-datasource-initionalization: true
+    url: jdbc:mysql://localhost:3306/campingboard_db?useUnicode=true&characterEncoding=utf8&serverTimezone=Asia/Seoul
+    username: root
+    password: ekekek002
+    driver-class-name: com.mysql.cj.jdbc.Driver
+    mapper-locations: classpath:/mapper/**/*.xml
+#
+#  jpa:
+#    generate-ddl: true
+#    hibernate:
+#      # 자동으로 테이블을 생성해주는 모드
+#      ddl-auto: create
+#    properties:
+#      hibernate:
+#        format_sql: true
+#        # show_sql: true
+#        # default_batch_fetch_size: 1000 #최적화 옵션
+#    defer-datasource-initionalization: true
 
 logging.level:
   org.hibernate.SQL: debug
   # org.hibernate.type: trace
+
+
+server:
+  servlet:
+    session:
+      tracking-modes: cookie # url 전달방식을 끄고 항상 쿠키를 통하여 세션을 유지
+    timeout: 1800 # 세션 종료 시점은 디폴트 1800(초), 글로벌 설정은 분단위로 설정하여야 한다. 세션 종료 시점은 서버에서 직접 설정 가능
+
