edit home page logic

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -21,8 +21,8 @@ spring:
 #    defer-datasource-initionalization: true
 
 logging.level:
-  org.hibernate.SQL: debug
-  # org.hibernate.type: trace
+  # org.hibernate.SQL: debug
+  org.hibernate.type: trace
 
 
 server:
