--- a/build.gradle
+++ b/build.gradle
@@ -31,6 +31,8 @@ dependencies {
 	runtimeOnly 'mysql:mysql-connector-java'
 
 	compileOnly 'org.projectlombok:lombok'
+	compileOnly "org.mybatis:mybatis-typehandlers-jsr310:1.0.2"
+
 
 
 
