--- a/build.gradle
+++ b/build.gradle
@@ -14,10 +14,12 @@ configurations {
 	}
 }
 
+// 라이브러리 저장소
 repositories {
 	mavenCentral()
 }
 
+// 의존성
 dependencies {
 	implementation 'org.springframework.boot:spring-boot-starter-thymeleaf'
 	implementation 'org.springframework.boot:spring-boot-starter-validation'
